--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "start-https": "HTTPS=true SSL_CRT_FILE=cert.crt SSL_KEY_FILE=cert.key react-scripts start"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@hookform/resolvers": "^3.9.0",
+    "@mui/material": "^6.1.4",
+    "@mui/x-charts": "^7.21.0",
     "@reduxjs/toolkit": "^2.2.6",
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.7.2",
@@ -25,6 +29,7 @@
     "react-router-dom": "^6.24.1",
     "react-scripts": "^3.0.1",
     "react-toastify": "^10.0.5",
+    "recharts": "^2.13.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
